# 42-webserv-cpp-20

./: .gitignore  CMakeLists.txt  LICENSE  README.md
conf/: config.yaml
doc/name-later/: ServerApp.puml
doc/usecase-diagrams/: event-usecase.puml  network-usecase.puml
include/http/: http.cpp  http.h  request.cpp  request.h
src/: main.cpp
src/app/configFactory/: configFactory.h
src/app/configFactory/cliOptions/: cliOptions.cpp  cliOptions.h
src/app/serverApp/: serverApp.cpp  serverApp.h
src/app/serverConf/: serverConf.cpp  serverConf.h
src/app/serverConf/server/: location.h  redirect.h  server.h
src/app/signalHandler/: signalHandler.cpp  signalHandler.h
tests/: CMakeLists.txt
third-parties/: CMakeLists.txt
